--- a/app/[lang]/page.module.css
+++ b/app/[lang]/page.module.css
@@ -1,16 +1,24 @@
-.text {
-  display: grid;
-  align-items: center;
-}
-
+.text,
 .links {
   display: grid;
   align-items: center;
   gap: 1rem;
 }
 
+.text > * > p:first-child {
+  font-weight: bold;
+}
+
 .links > * {
   padding: 1rem;
   background-color: #1d282e;
   border-radius: 0.25rem;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.75rem;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.links > *:hover {
+  background-color: #2d3e44;
 }
