--- a/app/[lang]/page.module.css
+++ b/app/[lang]/page.module.css
@@ -15,8 +15,12 @@
   border-radius: 0.25rem;
   display: inline-flex;
   align-items: center;
-  gap: 0.75rem;
+  /* gap: 0.75rem; */
   transition: background-color 0.2s ease-in-out;
+}
+
+.links > * > :first-child {
+  margin-right: 0.75rem;
 }
 
 .links > *:hover {
